ensure loop items are full width on mobile

--- a/_private/scss/frontend/_loop.scss
+++ b/_private/scss/frontend/_loop.scss
@@ -2,7 +2,7 @@
 	@extend %clearfix;
 
 	list-style: none;
-	margin: 0;
+	margin: 0 -10px;
 	padding: 0;
 
 	@media all and (min-width: 600px) {
@@ -23,6 +23,7 @@
 	list-style: none;
 	margin: 0;
 	padding: 0;
+	width: 100%;
 }
 
 
